--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-spinners": "^0.9.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
